--- a/_columns/Stock_Of_the_Day/2023-04-19.md
+++ b/_columns/Stock_Of_the_Day/2023-04-19.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: New Relic, IBD Stock Of The Day, Aims To Be A Source Of Truth For Engineers
+title: >-
+  New Relic, IBD Stock Of The Day, Aims To Be A Source Of Truth For Engineers
 image: /assets/img/stock-of-the-day/2023-04-19.jpg
 date: 2023-04-19 16:26 -0700
+author: BRIAN DEAGON
 ---
 
-
-
-* [BRIAN DEAGON](https://www.investors.com/author/deagonb/ "Posts by BRIAN DEAGON")
-* 04:26 PM ET 04/19/2023
 
 
 
