--- a/_columns/Stock_Of_the_Day/2023-04-20.md
+++ b/_columns/Stock_Of_the_Day/2023-04-20.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: AMD, IBD Stock Of The Day, Bounces Off Key Support Level
+title: >-
+  AMD, IBD Stock Of The Day, Bounces Off Key Support Level
 image: /assets/img/stock-of-the-day/2023-04-20.jpg
 date: 2023-04-20 16:30 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:30 PM ET 04/20/2023
 
 
 
