--- a/_columns/Stock_Of_the_Day/2023-04-21.md
+++ b/_columns/Stock_Of_the_Day/2023-04-21.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Stock Of The Day: TJX Stock, Loving This Retail Climate, Flashes Buy Signal
+title: >-
+  Stock Of The Day: TJX Stock, Loving This Retail Climate, Flashes Buy Signal
 image: /assets/img/stock-of-the-day/2023-04-21.jpg
 date: 2023-04-21 16:29 -0700
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 04:29 PM ET 04/21/2023
 
 
 
