--- a/_columns/Stock_Of_the_Day/2023-04-24.md
+++ b/_columns/Stock_Of_the_Day/2023-04-24.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day InMode, A Top 2% Profit Machine, Is Nearing A Breakout
+title: >-
+  IBD Stock Of The Day InMode, A Top 2% Profit Machine, Is Nearing A Breakout
 image: /assets/img/stock-of-the-day/2023-04-24.jpg
 date: 2023-04-24 16:57 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:57 PM ET 04/24/2023
 
 
 
