--- a/_columns/Stock_Of_the_Day/2023-04-25.md
+++ b/_columns/Stock_Of_the_Day/2023-04-25.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day: BJ Stock Near Buy Point. Retailer Hasn't Done This Since 2018
+title: >-
+  IBD Stock Of The Day: BJ Stock Near Buy Point. Retailer Hasn't Done This Since 2018
 image: /assets/img/stock-of-the-day/2023-04-25.jpg
 date: 2023-04-25 17:04 -0700
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 05:04 PM ET 04/25/2023
 
 
 
