--- a/_columns/Stock_Of_the_Day/2023-04-26.md
+++ b/_columns/Stock_Of_the_Day/2023-04-26.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Rapid7, Stock Of The Day, Shields Companies From Hacking Attacks
+title: >-
+  Rapid7, Stock Of The Day, Shields Companies From Hacking Attacks
 image: /assets/img/stock-of-the-day/2023-04-26.jpg
 date: 2023-04-26 13:50 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 01:50 PM ET 04/26/2023
 
 
 
