--- a/_columns/Stock_Of_the_Day/2023-04-27.md
+++ b/_columns/Stock_Of_the_Day/2023-04-27.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day, Foodservice Giant Performance Food Group, Eyes Breakout Near All-Time Highs
+title: >-
+  IBD Stock Of The Day, Foodservice Giant Performance Food Group, Eyes Breakout Near All-Time Highs
 image: /assets/img/stock-of-the-day/2023-04-27.jpg
 date: 2023-04-27 14:22 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 02:22 PM ET 04/27/2023
 
 
 
