--- a/_columns/Stock_Of_the_Day/2023-04-28.md
+++ b/_columns/Stock_Of_the_Day/2023-04-28.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Arista: Artificial Intelligence, Profit Outlook Could Move Stock
+title: >-
+  Arista: Artificial Intelligence, Profit Outlook Could Move Stock
 image: /assets/img/stock-of-the-day/2023-04-28.jpg
 date: 2023-04-28 16:15 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:15 PM ET 04/28/2023
 
 
 
