--- a/_columns/Stock_Of_the_Day/2023-05-01.md
+++ b/_columns/Stock_Of_the_Day/2023-05-01.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Nvidia, IBD Stock Of The Day, Hits Buy Point On AI Enthusiasm
+title: >-
+  Nvidia, IBD Stock Of The Day, Hits Buy Point On AI Enthusiasm
 image: /assets/img/stock-of-the-day/2023-05-01.jpg
 date: 2023-05-01 16:21 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:21 PM ET 05/01/2023
 
 
 
