--- a/_columns/Stock_Of_the_Day/2023-05-02.md
+++ b/_columns/Stock_Of_the_Day/2023-05-02.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: GDX, Stock Of The Day, Shines Bright As Bank Woes, Debt-Ceiling Fears Lift Gold Price
+title: >-
+  GDX, Stock Of The Day, Shines Bright As Bank Woes, Debt-Ceiling Fears Lift Gold Price
 image: /assets/img/stock-of-the-day/2023-05-02.jpg
 date: 2023-05-02 16:42 -0700
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 04:42 PM ET 05/02/2023
 
 
 
@@ -85,11 +83,7 @@ GDX stock popped 4% to 34.74 in Tuesday's stock market action. That leaves GDX s
 
 
 X
-More Videos0 seconds of 0 secondsVolume 0%Press shift question mark to access a list of keyboard shortcutsKeyboard ShortcutsEnabledDisabledPlay/PauseSPACEIncrease Volume↑Decrease Volume↓Seek Forward→Seek Backward←Captions On/OffcFullscreen/Exit FullscreenfMute/UnmutemSeek %0-9
- 
 
-
-Next UpWhat Are Dividend Stocks?06:55SettingsOffEnglishFont ColorundefinedFont Opacity100%Font Size100%Font FamilyundefinedCharacter EdgeNoneBackground ColorBlackBackground Opacity75%Window ColorBlackWindow Opacity0%ResetWhiteBlackRedGreenBlueYellowMagentaCyan100%75%50%25%200%175%150%125%100%75%50%ArialCourierGeorgiaImpactLucida ConsoleTahomaTimes New RomanTrebuchet MSVerdanaNoneRaisedDepressedUniformDrop ShadowWhiteBlackRedGreenBlueYellowMagentaCyan100%75%50%25%0%WhiteBlackRedGreenBlueYellowMagentaCyan100%75%50%25%0%0.5x1x1.25x1.5x2xLive00:0000:0000:00 
 
 
 {"@context":"https:\/\/schema.org","@type":"VideoObject","name":"Option Trade On GOOGL Stock Has Zero Upside Risk, Solid Profit Potential","description":"Google has been struggling to break out from a recent bottoming base. This trade profits if the stock stays in this trading range.","thumbnailUrl":"https:\/\/www.investors.com\/wp-content\/uploads\/2023\/05\/nxlFRmn8-640x360.jpg","contentUrl":"https:\/\/content.jwplatform.com\/manifests\/nxlFRmn8.m3u8","uploadDate":"2023-05-02T10:35:43+0000","duration":"PT231.08S","author":{"@type":"Person","name":"RACHEL FOX"},"publisher":{"@type":"Organization","name":"Investor's Business Daily","logo":{"@type":"ImageObject","url":false},"url":"https:\/\/www.investors.com"},"keywords":""}
