--- a/_columns/Stock_Of_the_Day/2023-04-04.md
+++ b/_columns/Stock_Of_the_Day/2023-04-04.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: How This Payroll Processor Could Buck The Storm If Jobless Rate Rises
+title: >-
+  How This Payroll Processor Could Buck The Storm If Jobless Rate Rises
 image: /assets/img/stock-of-the-day/2023-04-04.jpg
 date: 2023-04-04 16:35 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:35 PM ET 04/04/2023
 
 
 
