--- a/_columns/Stock_Of_the_Day/2023-04-10.md
+++ b/_columns/Stock_Of_the_Day/2023-04-10.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Five Below, IBD Stock Of The Day, Breaks Out As Growth Picks Up
+title: >-
+  Five Below, IBD Stock Of The Day, Breaks Out As Growth Picks Up
 image: /assets/img/stock-of-the-day/2023-04-10.jpg
 date: 2023-04-10 16:09 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:09 PM ET 04/10/2023
 
 
 
