--- a/_columns/Stock_Of_the_Day/2023-04-11.md
+++ b/_columns/Stock_Of_the_Day/2023-04-11.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: D.R. Horton, Stock Of The Day: DHI Stock In Buy Zone As Housing Market Improves
+title: >-
+  D.R. Horton, Stock Of The Day: DHI Stock In Buy Zone As Housing Market Improves
 image: /assets/img/stock-of-the-day/2023-04-11.jpg
 date: 2023-04-11 16:41 -0700
+author: APARNA NARAYANAN
 ---
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 04:41 PM ET 04/11/2023
 
 
 
