--- a/_columns/Stock_Of_the_Day/2023-04-12.md
+++ b/_columns/Stock_Of_the_Day/2023-04-12.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Shopify Stock Upgraded, Claws Above 50-Day Moving Average
+title: >-
+  Shopify Stock Upgraded, Claws Above 50-Day Moving Average
 image: /assets/img/stock-of-the-day/2023-04-12.jpg
 date: 2023-04-12 16:20 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:20 PM ET 04/12/2023
 
 
 
