--- a/_columns/Stock_Of_the_Day/2023-04-13.md
+++ b/_columns/Stock_Of_the_Day/2023-04-13.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Freshpet, IBD Stock Of The Day, Zooms 25% As Healthy Pet Food Sales Spike
+title: >-
+  Freshpet, IBD Stock Of The Day, Zooms 25% As Healthy Pet Food Sales Spike
 image: /assets/img/stock-of-the-day/2023-04-13.jpg
 date: 2023-04-13 16:51 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 04:51 PM ET 04/13/2023
 
 
 
