--- a/_columns/Stock_Of_the_Day/2023-04-14.md
+++ b/_columns/Stock_Of_the_Day/2023-04-14.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Wingstop, Stock Of The Day, Sets Up To Take Flight Again
+title: >-
+  Wingstop, Stock Of The Day, Sets Up To Take Flight Again
 image: /assets/img/stock-of-the-day/2023-04-14.jpg
 date: 2023-04-14 17:53 -0700
+author: ED CARSON
 ---
 
-
-
-* [ED CARSON](https://www.investors.com/author/carsone/ "Posts by ED CARSON")
-* 05:53 PM ET 04/14/2023
 
 
 
