--- a/_columns/Stock_Of_the_Day/2023-04-17.md
+++ b/_columns/Stock_Of_the_Day/2023-04-17.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day: FND Stock, A Soft-Landing Play, Nears Buy Point
+title: >-
+  IBD Stock Of The Day: FND Stock, A Soft-Landing Play, Nears Buy Point
 image: /assets/img/stock-of-the-day/2023-04-17.jpg
 date: 2023-04-17 15:14 -0700
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 03:14 PM ET 04/17/2023
 
 
 
