--- a/_columns/Stock_Of_the_Day/2023-04-18.md
+++ b/_columns/Stock_Of_the_Day/2023-04-18.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: DoubleVerify Rides Internet TV, Social Media Digital Ad Growth
+title: >-
+  DoubleVerify Rides Internet TV, Social Media Digital Ad Growth
 image: /assets/img/stock-of-the-day/2023-04-18.jpg
 date: 2023-04-18 16:36 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:36 PM ET 04/18/2023
 
 
 
