--- a/_columns/Stock_Of_the_Day/2023-04-05.md
+++ b/_columns/Stock_Of_the_Day/2023-04-05.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day Intuitive Surgical Faces A Potentially Game-Changing 2024
+title: >-
+  IBD Stock Of The Day Intuitive Surgical Faces A Potentially Game-Changing 2024
 image: /assets/img/stock-of-the-day/2023-04-05.jpg
 date: 2023-04-05 16:31 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:31 PM ET 04/05/2023
 
 
 
