--- a/_columns/Stock_Of_the_Day/2023-04-06.md
+++ b/_columns/Stock_Of_the_Day/2023-04-06.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Visa Is Stock Of The Day: Unfazed By Banking Crisis, Payments Giant Nears Buy Point
+title: >-
+  Visa Is Stock Of The Day: Unfazed By Banking Crisis, Payments Giant Nears Buy Point
 image: /assets/img/stock-of-the-day/2023-04-06.jpg
 date: 2023-04-06 16:49 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 04:49 PM ET 04/06/2023
 
 
 
