--- a/_columns/Stock_Of_the_Day/2023-03-22.md
+++ b/_columns/Stock_Of_the_Day/2023-03-22.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Microsoft, IBD Stock Of The Day, Flirts With Buy Point On AI News
+title: >-
+  Microsoft, IBD Stock Of The Day, Flirts With Buy Point On AI News
 image: /assets/img/stock-of-the-day/2023-03-22.jpg
 date: 2023-03-22 16:26 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:26 PM ET 03/22/2023
 
 
 
