--- a/_columns/Stock_Of_the_Day/2023-03-23.md
+++ b/_columns/Stock_Of_the_Day/2023-03-23.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Stock Of The Day Meritage Homes Nears Buy Point, Already Flashing This Bullish Signal
+title: >-
+  Stock Of The Day Meritage Homes Nears Buy Point, Already Flashing This Bullish Signal
 image: /assets/img/stock-of-the-day/2023-03-23.jpg
 date: 2023-03-23 16:33 -0700
+author: APARNA NARAYANAN
 ---
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 04:33 PM ET 03/23/2023
 
 
 
