--- a/_columns/Stock_Of_the_Day/2023-03-24.md
+++ b/_columns/Stock_Of_the_Day/2023-03-24.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: PagerDuty Turns The Corner On Profitability Amid Strong Growth
+title: >-
+  PagerDuty Turns The Corner On Profitability Amid Strong Growth
 image: /assets/img/stock-of-the-day/2023-03-24.jpg
 date: 2023-03-24 16:46 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:46 PM ET 03/24/2023
 
 
 
