--- a/_columns/Stock_Of_the_Day/2023-03-27.md
+++ b/_columns/Stock_Of_the_Day/2023-03-27.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Tenable, IBD Stock Of The Day, Rises As Cybersecurity Offering Gains Traction
+title: >-
+  Tenable, IBD Stock Of The Day, Rises As Cybersecurity Offering Gains Traction
 image: /assets/img/stock-of-the-day/2023-03-27.jpg
 date: 2023-03-27 16:40 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:40 PM ET 03/27/2023
 
 
 
