--- a/_columns/Stock_Of_the_Day/2023-03-29.md
+++ b/_columns/Stock_Of_the_Day/2023-03-29.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Shift4 Growth Rides International Expansion, Next-Gen Payment System
+title: >-
+  Shift4 Growth Rides International Expansion, Next-Gen Payment System
 image: /assets/img/stock-of-the-day/2023-03-29.jpg
 date: 2023-03-29 09:31 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 09:31 AM ET 03/29/2023
 
 
 
