--- a/_columns/Stock_Of_the_Day/2023-03-30.md
+++ b/_columns/Stock_Of_the_Day/2023-03-30.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: DraftKings, IBD Stock Of The Day: Time To Bet On This Gaming Play?
+title: >-
+  DraftKings, IBD Stock Of The Day: Time To Bet On This Gaming Play?
 image: /assets/img/stock-of-the-day/2023-03-30.jpg
 date: 2023-03-30 16:04 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:04 PM ET 03/30/2023
 
 
 
