--- a/_columns/Stock_Of_the_Day/2023-03-31.md
+++ b/_columns/Stock_Of_the_Day/2023-03-31.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day: Axon Stock Steps Out As Bulletproof Safe-Growth Play
+title: >-
+  IBD Stock Of The Day: Axon Stock Steps Out As Bulletproof Safe-Growth Play
 image: /assets/img/stock-of-the-day/2023-03-31.jpg
 date: 2023-03-31 16:48 -0700
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 04:48 PM ET 03/31/2023
 
 
 
