--- a/_columns/Stock_Of_the_Day/2023-04-03.md
+++ b/_columns/Stock_Of_the_Day/2023-04-03.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Southern Copper, Stock Of The Day: Green Energy Play Near Buy Point
+title: >-
+  Southern Copper, Stock Of The Day: Green Energy Play Near Buy Point
 image: /assets/img/stock-of-the-day/2023-04-03.jpg
 date: 2023-04-03 16:22 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:22 PM ET 04/03/2023
 
 
 
