--- a/_columns/Stock_Of_the_Day/2023-03-21.md
+++ b/_columns/Stock_Of_the_Day/2023-03-21.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day: With 50% Gain This Year, Align Shrugs Off Macro And Eyes Two Entries
+title: >-
+  IBD Stock Of The Day: With 50% Gain This Year, Align Shrugs Off Macro And Eyes Two Entries
 image: /assets/img/stock-of-the-day/2023-03-21.jpg
 date: 2023-03-21 16:24 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:24 PM ET 03/21/2023
 
 
 
