--- a/_columns/Stock_Of_the_Day/2023-03-07.md
+++ b/_columns/Stock_Of_the_Day/2023-03-07.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: New Relic, IBD Stock Of The Day, Helps Companies Turn Data Into Profits
+title: >-
+  New Relic, IBD Stock Of The Day, Helps Companies Turn Data Into Profits
 image: /assets/img/stock-of-the-day/2023-03-07.jpg
 date: 2023-03-07 16:33 -0800
+author: BRIAN DEAGON
 ---
 
-
-
-* [BRIAN DEAGON](https://www.investors.com/author/deagonb/ "Posts by BRIAN DEAGON")
-* 04:33 PM ET 03/07/2023
 
 
 
