--- a/_columns/Stock_Of_the_Day/2023-03-08.md
+++ b/_columns/Stock_Of_the_Day/2023-03-08.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day: FND Stock, At Key Support Level, Is Play On Soft Landing
+title: >-
+  IBD Stock Of The Day: FND Stock, At Key Support Level, Is Play On Soft Landing
 image: /assets/img/stock-of-the-day/2023-03-08.jpg
 date: 2023-03-08 14:28 -0800
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 02:28 PM ET 03/08/2023
 
 
 
