--- a/_columns/Stock_Of_the_Day/2023-03-09.md
+++ b/_columns/Stock_Of_the_Day/2023-03-09.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day ODFL: Trucker Old Dominion Geared Up To Lead Soft-Landing Rally
+title: >-
+  IBD Stock Of The Day ODFL: Trucker Old Dominion Geared Up To Lead Soft-Landing Rally
 image: /assets/img/stock-of-the-day/2023-03-09.jpg
 date: 2023-03-09 17:00 -0800
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 05:00 PM ET 03/09/2023
 
 
 
