--- a/_columns/Stock_Of_the_Day/2023-03-10.md
+++ b/_columns/Stock_Of_the_Day/2023-03-10.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Meta, IBD Stock Of The Day, Aims For 'Year Of Efficiency' In A Tough Time
+title: >-
+  Meta, IBD Stock Of The Day, Aims For 'Year Of Efficiency' In A Tough Time
 image: /assets/img/stock-of-the-day/2023-03-10.jpg
 date: 2023-03-10 17:03 -0800
+author: BRIAN DEAGON
 ---
 
-
-
-* [BRIAN DEAGON](https://www.investors.com/author/deagonb/ "Posts by BRIAN DEAGON")
-* 05:03 PM ET 03/10/2023
 
 
 
