--- a/_columns/Stock_Of_the_Day/2023-03-14.md
+++ b/_columns/Stock_Of_the_Day/2023-03-14.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: MarketAxess, IBD Stock Of The Day, Nears Buy Point Amid SVB Financial Crash
+title: >-
+  MarketAxess, IBD Stock Of The Day, Nears Buy Point Amid SVB Financial Crash
 image: /assets/img/stock-of-the-day/2023-03-14.jpg
 date: 2023-03-14 16:10 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:10 PM ET 03/14/2023
 
 
 
