--- a/_columns/Stock_Of_the_Day/2023-03-15.md
+++ b/_columns/Stock_Of_the_Day/2023-03-15.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Fortinet, IBD Stock Of The Day, Helps Companies Protect Valuable Data
+title: >-
+  Fortinet, IBD Stock Of The Day, Helps Companies Protect Valuable Data
 image: /assets/img/stock-of-the-day/2023-03-15.jpg
 date: 2023-03-15 16:42 -0700
+author: BRIAN DEAGON
 ---
 
-
-
-* [BRIAN DEAGON](https://www.investors.com/author/deagonb/ "Posts by BRIAN DEAGON")
-* 04:42 PM ET 03/15/2023
 
 
 
