--- a/_columns/Stock_Of_the_Day/2023-03-16.md
+++ b/_columns/Stock_Of_the_Day/2023-03-16.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day Lantheus Continues Its Run With A Breakout
+title: >-
+  IBD Stock Of The Day Lantheus Continues Its Run With A Breakout
 image: /assets/img/stock-of-the-day/2023-03-16.jpg
 date: 2023-03-16 16:27 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:27 PM ET 03/16/2023
 
 
 
