--- a/_columns/Stock_Of_the_Day/2023-03-17.md
+++ b/_columns/Stock_Of_the_Day/2023-03-17.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: HubSpot Stock Climbs Amid Buzz Over Artificial Intelligence
+title: >-
+  HubSpot Stock Climbs Amid Buzz Over Artificial Intelligence
 image: /assets/img/stock-of-the-day/2023-03-17.jpg
 date: 2023-03-17 16:22 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:22 PM ET 03/17/2023
 
 
 
