--- a/_columns/Stock_Of_the_Day/2023-03-20.md
+++ b/_columns/Stock_Of_the_Day/2023-03-20.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: How Palo Alto Turned Itself Into A Cybersecurity Powerhouse
+title: >-
+  How Palo Alto Turned Itself Into A Cybersecurity Powerhouse
 image: /assets/img/stock-of-the-day/2023-03-20.jpg
 date: 2023-03-20 16:19 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:19 PM ET 03/20/2023
 
 
 
