--- a/_columns/Stock_Of_the_Day/2023-03-13.md
+++ b/_columns/Stock_Of_the_Day/2023-03-13.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: MSCI Stock Rebounds From Support, Teams Up With Google
+title: >-
+  MSCI Stock Rebounds From Support, Teams Up With Google
 image: /assets/img/stock-of-the-day/2023-03-13.jpg
 date: 2023-03-13 14:04 -0700
+author: APARNA NARAYANAN
 ---
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 02:04 PM ET 03/13/2023
 
 
 
