--- a/_columns/Stock_Of_the_Day/2023-02-21.md
+++ b/_columns/Stock_Of_the_Day/2023-02-21.md
@@ -1,16 +1,14 @@
 ---
 layout: page
-title: Autoliv Stock Offers Buy Point And A Way To Play The EV Boom
+title: >-
+  Autoliv Stock Offers Buy Point And A Way To Play The EV Boom
 image: /assets/img/stock-of-the-day/2023-02-21.jpg
 date: 2023-02-21 14:01 -0800
+author: APARNA NARAYANAN
 ---
 
 ![](https://www.investors.com/wp-content/uploads/2023/02/sotd-for-02-21-2023-desktop.png)Autoliv has returned to profitability after facing severe cost inflation. It's also now hitched to EV adoption.
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 02:01 PM ET 02/21/2023
 
 
 
