--- a/_columns/Stock_Of_the_Day/2023-02-22.md
+++ b/_columns/Stock_Of_the_Day/2023-02-22.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: SPS Commerce, IBD Stock Of The Day, Shows Resilience In Tough Climate
+title: >-
+  SPS Commerce, IBD Stock Of The Day, Shows Resilience In Tough Climate
 image: /assets/img/stock-of-the-day/2023-02-22.jpg
 date: 2023-02-22 16:22 -0800
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:22 PM ET 02/22/2023
 
 
 
