--- a/_columns/Stock_Of_the_Day/2023-02-23.md
+++ b/_columns/Stock_Of_the_Day/2023-02-23.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Planet Fitness Stock Muscles Up On Earnings, Nears Buy Point
+title: >-
+  Planet Fitness Stock Muscles Up On Earnings, Nears Buy Point
 image: /assets/img/stock-of-the-day/2023-02-23.jpg
 date: 2023-02-23 16:05 -0800
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:05 PM ET 02/23/2023
 
 
 
