--- a/_columns/Stock_Of_the_Day/2023-02-24.md
+++ b/_columns/Stock_Of_the_Day/2023-02-24.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: MercadoLibre, IBD Stock Of The Day, Fuels E-Commerce Across Latin America
+title: >-
+  MercadoLibre, IBD Stock Of The Day, Fuels E-Commerce Across Latin America
 image: /assets/img/stock-of-the-day/2023-02-24.jpg
 date: 2023-02-24 16:30 -0800
+author: BRIAN DEAGON
 ---
 
-
-
-* [BRIAN DEAGON](https://www.investors.com/author/deagonb/ "Posts by BRIAN DEAGON")
-* 04:30 PM ET 02/24/2023
 
 
 
