--- a/_columns/Stock_Of_the_Day/2023-02-27.md
+++ b/_columns/Stock_Of_the_Day/2023-02-27.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Royal Caribbean Stock Sails Into Buy Range On Profit Wave
+title: >-
+  Royal Caribbean Stock Sails Into Buy Range On Profit Wave
 image: /assets/img/stock-of-the-day/2023-02-27.jpg
 date: 2023-02-27 15:11 -0800
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 03:11 PM ET 02/27/2023
 
 
 
