--- a/_columns/Stock_Of_the_Day/2023-03-01.md
+++ b/_columns/Stock_Of_the_Day/2023-03-01.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day: FCX Stock Flashes Buy Signal On Hot China Manufacturing, Mine Reopening
+title: >-
+  IBD Stock Of The Day: FCX Stock Flashes Buy Signal On Hot China Manufacturing, Mine Reopening
 image: /assets/img/stock-of-the-day/2023-03-01.jpg
 date: 2023-03-01 14:18 -0800
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 02:18 PM ET 03/01/2023
 
 
 
