--- a/_columns/Stock_Of_the_Day/2023-03-02.md
+++ b/_columns/Stock_Of_the_Day/2023-03-02.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: UAL Stock, Near Takeoff, Has 'Never Had A Better Setup'
+title: >-
+  UAL Stock, Near Takeoff, Has 'Never Had A Better Setup'
 image: /assets/img/stock-of-the-day/2023-03-02.jpg
 date: 2023-03-02 14:47 -0800
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 02:47 PM ET 03/02/2023
 
 
 
