--- a/_columns/Stock_Of_the_Day/2023-03-03.md
+++ b/_columns/Stock_Of_the_Day/2023-03-03.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Nextracker, IBD Stock Of The Day, Keeps The Light On In Hot Solar Market
+title: >-
+  Nextracker, IBD Stock Of The Day, Keeps The Light On In Hot Solar Market
 image: /assets/img/stock-of-the-day/2023-03-03.jpg
 date: 2023-03-03 16:25 -0800
+author: BRIAN DEAGON
 ---
 
-
-
-* [BRIAN DEAGON](https://www.investors.com/author/deagonb/ "Posts by BRIAN DEAGON")
-* 04:25 PM ET 03/03/2023
 
 
 
