--- a/_columns/Stock_Of_the_Day/2023-03-06.md
+++ b/_columns/Stock_Of_the_Day/2023-03-06.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Splunk, IBD Stock Of The Day, Is Helping Companies Analyze Vast Quantities Of Data
+title: >-
+  Splunk, IBD Stock Of The Day, Is Helping Companies Analyze Vast Quantities Of Data
 image: /assets/img/stock-of-the-day/2023-03-06.jpg
 date: 2023-03-06 16:31 -0800
+author: BRIAN DEAGON
 ---
 
-
-
-* [BRIAN DEAGON](https://www.investors.com/author/deagonb/ "Posts by BRIAN DEAGON")
-* 04:31 PM ET 03/06/2023
 
 
 
