--- a/_columns/Stock_Of_the_Day/2023-02-28.md
+++ b/_columns/Stock_Of_the_Day/2023-02-28.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Deckers Outdoor Rebounds As Shoe Stocks Hit Their Stride
+title: >-
+  Deckers Outdoor Rebounds As Shoe Stocks Hit Their Stride
 image: /assets/img/stock-of-the-day/2023-02-28.jpg
 date: 2023-02-28 14:11 -0800
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 02:11 PM ET 02/28/2023
 
 
 
