--- a/_columns/Stock_Of_the_Day/2023-02-08.md
+++ b/_columns/Stock_Of_the_Day/2023-02-08.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: How IBD Stock Of The Day Inspire Medical Systems Won A Breakout
+title: >-
+  How IBD Stock Of The Day Inspire Medical Systems Won A Breakout
 image: /assets/img/stock-of-the-day/2023-02-08.jpg
 date: 2023-02-08 17:06 -0800
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 05:06 PM ET 02/08/2023
 
 
 
