--- a/_columns/Stock_Of_the_Day/2023-02-09.md
+++ b/_columns/Stock_Of_the_Day/2023-02-09.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: DoubleVerify Is The IBD Stock Of The Day Ahead Of Earnings
+title: >-
+  DoubleVerify Is The IBD Stock Of The Day Ahead Of Earnings
 image: /assets/img/stock-of-the-day/2023-02-09.jpg
 date: 2023-02-09 16:35 -0800
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:35 PM ET 02/09/2023
 
 
 
