--- a/_columns/Stock_Of_the_Day/2023-02-10.md
+++ b/_columns/Stock_Of_the_Day/2023-02-10.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day Dexcom Bounds Off A New Entry After Topping Bullish Calls
+title: >-
+  IBD Stock Of The Day Dexcom Bounds Off A New Entry After Topping Bullish Calls
 image: /assets/img/stock-of-the-day/2023-02-10.jpg
 date: 2023-02-10 16:59 -0800
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:59 PM ET 02/10/2023
 
 
 
