--- a/_columns/Stock_Of_the_Day/2023-02-14.md
+++ b/_columns/Stock_Of_the_Day/2023-02-14.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Can Okta Stock Rebound From Nettlesome Acquisition Amid Microsoft Competition?
+title: >-
+  Can Okta Stock Rebound From Nettlesome Acquisition Amid Microsoft Competition?
 image: /assets/img/stock-of-the-day/2023-02-14.jpg
 date: 2023-02-14 16:18 -0800
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:18 PM ET 02/14/2023
 
 
 
