--- a/_columns/Stock_Of_the_Day/2023-02-06.md
+++ b/_columns/Stock_Of_the_Day/2023-02-06.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: VRT Stock Nears Buy Point, Projects Strong 2023; But Keep An Eye On This
+title: >-
+  VRT Stock Nears Buy Point, Projects Strong 2023; But Keep An Eye On This
 image: /assets/img/stock-of-the-day/2023-02-06.jpg
 date: 2023-02-06 14:35 -0800
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 02:35 PM ET 02/06/2023
 
 
 
