--- a/_columns/Stock_Of_the_Day/2023-02-07.md
+++ b/_columns/Stock_Of_the_Day/2023-02-07.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day WillScot Mobile Mini Breaks Out
+title: >-
+  IBD Stock Of The Day WillScot Mobile Mini Breaks Out
 image: /assets/img/stock-of-the-day/2023-02-07.jpg
 date: 2023-02-07 16:11 -0800
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:11 PM ET 02/07/2023
 
 
 
