--- a/_columns/Stock_Of_the_Day/2023-02-13.md
+++ b/_columns/Stock_Of_the_Day/2023-02-13.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Biotech's Drug Pipeline Expands From Melanoma To Other Cancers
+title: >-
+  Biotech's Drug Pipeline Expands From Melanoma To Other Cancers
 image: /assets/img/stock-of-the-day/2023-02-13.jpg
 date: 2023-02-13 17:35 -0800
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 05:35 PM ET 02/13/2023
 
 
 
