--- a/_columns/Stock_Of_the_Day/2023-02-15.md
+++ b/_columns/Stock_Of_the_Day/2023-02-15.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Lamb Weston Stock, McDonald's Fries Supplier, Eyes Buy Point
+title: >-
+  Lamb Weston Stock, McDonald's Fries Supplier, Eyes Buy Point
 image: /assets/img/stock-of-the-day/2023-02-15.jpg
 date: 2023-02-15 16:06 -0800
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:06 PM ET 02/15/2023
 
 
 
