--- a/_columns/Stock_Of_the_Day/2023-02-16.md
+++ b/_columns/Stock_Of_the_Day/2023-02-16.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Iridium Tops Views As It Waits For Qualcomm Deal To Deliver
+title: >-
+  Iridium Tops Views As It Waits For Qualcomm Deal To Deliver
 image: /assets/img/stock-of-the-day/2023-02-16.jpg
 date: 2023-02-16 16:49 -0800
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:49 PM ET 02/16/2023
 
 
 
