--- a/_columns/Stock_Of_the_Day/2023-02-17.md
+++ b/_columns/Stock_Of_the_Day/2023-02-17.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Deere, IBD Stock Of The Day, Flashes Buy Signal On Strong Earnings, Guidance
+title: >-
+  Deere, IBD Stock Of The Day, Flashes Buy Signal On Strong Earnings, Guidance
 image: /assets/img/stock-of-the-day/2023-02-17.jpg
 date: 2023-02-17 17:08 -0800
+author: APARNA NARAYANAN
 ---
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 05:08 PM ET 02/17/2023
 
 
 
