--- a/_columns/Stock_Of_the_Day/2023-02-01.md
+++ b/_columns/Stock_Of_the_Day/2023-02-01.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Delta Air Lines Stock Takes Off On Air Travel Recovery
+title: >-
+  Delta Air Lines Stock Takes Off On Air Travel Recovery
 image: /assets/img/stock-of-the-day/2023-02-01.jpg
 date: 2023-02-01 17:13 -0800
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 05:13 PM ET 02/01/2023
 
 
 
