--- a/_columns/Stock_Of_the_Day/2023-02-02.md
+++ b/_columns/Stock_Of_the_Day/2023-02-02.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Canadian Solar, IBD Stock Of The Day, Rides Clean Energy Wave
+title: >-
+  Canadian Solar, IBD Stock Of The Day, Rides Clean Energy Wave
 image: /assets/img/stock-of-the-day/2023-02-02.jpg
 date: 2023-02-02 17:58 -0800
+author: BRIAN DEAGON
 ---
 
-
-
-* [BRIAN DEAGON](https://www.investors.com/author/deagonb/ "Posts by BRIAN DEAGON")
-* 05:58 PM ET 02/02/2023
 
 
 
