--- a/_columns/Stock_Of_the_Day/2023-02-03.md
+++ b/_columns/Stock_Of_the_Day/2023-02-03.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: How IBD Stock Of The Day InMode Is Smoothing Out The Wrinkles
+title: >-
+  How IBD Stock Of The Day InMode Is Smoothing Out The Wrinkles
 image: /assets/img/stock-of-the-day/2023-02-03.jpg
 date: 2023-02-03 13:53 -0800
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 01:53 PM ET 02/03/2023
 
 
 
