--- a/_columns/Stock_Of_the_Day/2023-06-27.md
+++ b/_columns/Stock_Of_the_Day/2023-06-27.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: United Airlines, IBD Stock Of The Day, Flies Past Buy Point On Rival's Bullish Guidance
+title: >-
+  United Airlines, IBD Stock Of The Day, Flies Past Buy Point On Rival's Bullish Guidance
 image: /assets/img/stock-of-the-day/2023-06-27.jpg
 date: 2023-06-27 16:06 -0700
 author: KIT NORTON
