--- a/_columns/Stock_Of_the_Day/2023-06-29.md
+++ b/_columns/Stock_Of_the_Day/2023-06-29.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Visa, IBD Stock Of The Day, Clears Early Entry As Defensive Payment Play Shines
+title: >-
+  Visa, IBD Stock Of The Day, Clears Early Entry As Defensive Payment Play Shines
 image: /assets/img/stock-of-the-day/2023-06-29.jpg
 date: 2023-06-29 15:15 -0700
 author: JED GRAHAM
