--- a/_columns/Stock_Of_the_Day/2023-07-05.md
+++ b/_columns/Stock_Of_the_Day/2023-07-05.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Google, IBD Stock Of The Day, Fends Off Microsoft's AI-Powered Bing
+title: >-
+  Google, IBD Stock Of The Day, Fends Off Microsoft's AI-Powered Bing
 image: /assets/img/stock-of-the-day/2023-07-05.jpg
 date: 2023-07-05 16:25 -0700
 author: PATRICK SEITZ
