--- a/_columns/Stock_Of_the_Day/2023-07-06.md
+++ b/_columns/Stock_Of_the_Day/2023-07-06.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Adobe, IBD Stock Of The Day, Looks To Monetize Generative AI
+title: >-
+  Adobe, IBD Stock Of The Day, Looks To Monetize Generative AI
 image: /assets/img/stock-of-the-day/2023-07-06.jpg
 date: 2023-07-06 16:50 -0700
 author: PATRICK SEITZ
