--- a/_columns/Stock_Of_the_Day/2023-07-11.md
+++ b/_columns/Stock_Of_the_Day/2023-07-11.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Caterpillar, IBD Stock Of The Day, Rolls Past Buy Point Amid Federal Windfall
+title: >-
+  Caterpillar, IBD Stock Of The Day, Rolls Past Buy Point Amid Federal Windfall
 image: /assets/img/stock-of-the-day/2023-07-11.jpg
 date: 2023-07-11 18:00 -0700
 author: JED GRAHAM
