--- a/_columns/Stock_Of_the_Day/2023-07-12.md
+++ b/_columns/Stock_Of_the_Day/2023-07-12.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Taiwan Semiconductor, IBD Stock Of The Day, Cashing In On AI Chip Production
+title: >-
+  Taiwan Semiconductor, IBD Stock Of The Day, Cashing In On AI Chip Production
 image: /assets/img/stock-of-the-day/2023-07-12.jpg
 date: 2023-07-12 17:01 -0700
 author: PATRICK SEITZ
