--- a/_columns/Stock_Of_the_Day/2023-07-14.md
+++ b/_columns/Stock_Of_the_Day/2023-07-14.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Why This AI Stock Takes A Licking But Keeps On Ticking
+title: >-
+  Why This AI Stock Takes A Licking But Keeps On Ticking
 image: /assets/img/stock-of-the-day/2023-07-14.jpg
 date: 2023-07-14 16:45 -0700
 author: REINHARDT KRAUSE
