--- a/_columns/Stock_Of_the_Day/2023-07-18.md
+++ b/_columns/Stock_Of_the_Day/2023-07-18.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: CrowdStrike Is IBD Stock Of The Day As It Prepares Move Into AI
+title: >-
+  CrowdStrike Is IBD Stock Of The Day As It Prepares Move Into AI
 image: /assets/img/stock-of-the-day/2023-07-18.jpg
 date: 2023-07-18 12:18 -0700
 author: REINHARDT KRAUSE
