--- a/_columns/Stock_Of_the_Day/2023-07-19.md
+++ b/_columns/Stock_Of_the_Day/2023-07-19.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Skechers Stock, A Rival To Roger Federer's On Holding, Runs Near Buy Point
+title: >-
+  Skechers Stock, A Rival To Roger Federer's On Holding, Runs Near Buy Point
 image: /assets/img/stock-of-the-day/2023-07-19.jpg
 date: 2023-07-19 12:52 -0700
 author: KIT NORTON
