--- a/_columns/Stock_Of_the_Day/2023-07-21.md
+++ b/_columns/Stock_Of_the_Day/2023-07-21.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: How AI Chip Growth Is Pushing Broadcom, Stock Of The Day, Toward A Buy Point
+title: >-
+  How AI Chip Growth Is Pushing Broadcom, Stock Of The Day, Toward A Buy Point
 image: /assets/img/stock-of-the-day/2023-07-21.jpg
 date: 2023-07-21 16:41 -0700
 author: PATRICK SEITZ
