--- a/_columns/Stock_Of_the_Day/2023-07-24.md
+++ b/_columns/Stock_Of_the_Day/2023-07-24.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: DraftKings, IBD Stock Of The Day, Parlays New Entry With 170% Run-Up In 2023
+title: >-
+  DraftKings, IBD Stock Of The Day, Parlays New Entry With 170% Run-Up In 2023
 image: /assets/img/stock-of-the-day/2023-07-24.jpg
 date: 2023-07-24 16:13 -0700
 author: HARRISON MILLER
