--- a/_columns/Stock_Of_the_Day/2023-07-25.md
+++ b/_columns/Stock_Of_the_Day/2023-07-25.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Will Palo Alto Networks Stock's Recent Rally Find A Second Wind?
+title: >-
+  Will Palo Alto Networks Stock's Recent Rally Find A Second Wind?
 image: /assets/img/stock-of-the-day/2023-07-25.jpg
 date: 2023-07-25 16:30 -0700
 author: REINHARDT KRAUSE
