--- a/_columns/Stock_Of_the_Day/2023-07-28.md
+++ b/_columns/Stock_Of_the_Day/2023-07-28.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: United Rentals, IBD Stock Of The Day, Awarded Slew Of Price Hikes After Q2 Earnings
+title: >-
+  United Rentals, IBD Stock Of The Day, Awarded Slew Of Price Hikes After Q2 Earnings
 image: /assets/img/stock-of-the-day/2023-07-28.jpg
 date: 2023-07-28 16:01 -0700
 author: KIT NORTON
