--- a/_columns/Stock_Of_the_Day/2023-08-01.md
+++ b/_columns/Stock_Of_the_Day/2023-08-01.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Oracle Looks For AI Boost In Cloud Infrastructure Business
+title: >-
+  Oracle Looks For AI Boost In Cloud Infrastructure Business
 image: /assets/img/stock-of-the-day/2023-08-01.jpg
 date: 2023-08-01 16:20 -0700
 author: REINHARDT KRAUSE
