--- a/_columns/Stock_Of_the_Day/2023-08-03.md
+++ b/_columns/Stock_Of_the_Day/2023-08-03.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Amazon Rival Is IBD's Pick Of the Day After The Stock Jumped 10% On Earnings
+title: >-
+  Amazon Rival Is IBD's Pick Of the Day After The Stock Jumped 10% On Earnings
 image: /assets/img/stock-of-the-day/2023-08-03.jpg
 date: 2023-08-03 12:28 -0700
 author: KIT NORTON
