--- a/_columns/Stock_Of_the_Day/2023-08-04.md
+++ b/_columns/Stock_Of_the_Day/2023-08-04.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Luxury Homebuilder Lennar, IBD Stock Of The Day, Near Entry As Construction Heats Up
+title: >-
+  Luxury Homebuilder Lennar, IBD Stock Of The Day, Near Entry As Construction Heats Up
 image: /assets/img/stock-of-the-day/2023-08-04.jpg
 date: 2023-08-04 14:55 -0700
 author: KIT NORTON
