--- a/_columns/Stock_Of_the_Day/2023-08-07.md
+++ b/_columns/Stock_Of_the_Day/2023-08-07.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Delta Air, IBD Stock Of The Day, Lands Picture-Perfect Pullback
+title: >-
+  Delta Air, IBD Stock Of The Day, Lands Picture-Perfect Pullback
 image: /assets/img/stock-of-the-day/2023-08-07.jpg
 date: 2023-08-07 14:09 -0700
 author: ALAN R. ELLIOTT
