--- a/_columns/Stock_Of_the_Day/2023-08-08.md
+++ b/_columns/Stock_Of_the_Day/2023-08-08.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Ollie's Bargain Outlet Has A Sense Of Humor. And Its Earnings Are No Joke.
+title: >-
+  Ollie's Bargain Outlet Has A Sense Of Humor. And Its Earnings Are No Joke.
 image: /assets/img/stock-of-the-day/2023-08-08.jpg
 date: 2023-08-08 15:53 -0700
 author: ALAN R. ELLIOTT
