--- a/_columns/Stock_Of_the_Day/2023-08-09.md
+++ b/_columns/Stock_Of_the_Day/2023-08-09.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: SLB Rides Rebounding Oil, Gas Prices
+title: >-
+  SLB Rides Rebounding Oil, Gas Prices
 image: /assets/img/stock-of-the-day/2023-08-09.jpg
 date: 2023-08-09 16:02 -0700
 author: KIT NORTON
