--- a/_columns/Stock_Of_the_Day/2023-06-28.md
+++ b/_columns/Stock_Of_the_Day/2023-06-28.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: HubSpot Stock Finds Support As 2023 Software Rally Looks For Second Wind
+title: >-
+  HubSpot Stock Finds Support As 2023 Software Rally Looks For Second Wind
 image: /assets/img/stock-of-the-day/2023-06-28.jpg
 date: 2023-06-28 16:36 -0700
 author: REINHARDT KRAUSE
