--- a/_columns/Stock_Of_the_Day/2023-07-10.md
+++ b/_columns/Stock_Of_the_Day/2023-07-10.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: This Cybersecurity Player Forges An Entry Point Off 10-Week Line
+title: >-
+  This Cybersecurity Player Forges An Entry Point Off 10-Week Line
 image: /assets/img/stock-of-the-day/2023-07-10.jpg
 date: 2023-07-10 16:58 -0700
 author: REINHARDT KRAUSE
