--- a/_columns/Stock_Of_the_Day/2023-07-20.md
+++ b/_columns/Stock_Of_the_Day/2023-07-20.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: IBD Stock Of The Day Novo Nordisk, A Weight-Loss Kingpin, Just Retook Its 50-Day Line
+title: >-
+  IBD Stock Of The Day Novo Nordisk, A Weight-Loss Kingpin, Just Retook Its 50-Day Line
 image: /assets/img/stock-of-the-day/2023-07-20.jpg
 date: 2023-07-20 16:24 -0700
 author: ALLISON GATLIN
