--- a/_columns/Stock_Of_the_Day/2023-08-02.md
+++ b/_columns/Stock_Of_the_Day/2023-08-02.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Vita Coco Stock, IBD's Pick Of The Day, Jumps After Q2 Profits Balloon 1,450%
+title: >-
+  Vita Coco Stock, IBD's Pick Of The Day, Jumps After Q2 Profits Balloon 1,450%
 image: /assets/img/stock-of-the-day/2023-08-02.jpg
 date: 2023-08-02 12:51 -0700
 author: KIT NORTON
