--- a/_columns/Stock_Of_the_Day/2023-08-10.md
+++ b/_columns/Stock_Of_the_Day/2023-08-10.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: A 66% YTD Gain Puts IBD Stock Of The Day In This Bullish Base Pattern
+title: >-
+  A 66% YTD Gain Puts IBD Stock Of The Day In This Bullish Base Pattern
 image: /assets/img/stock-of-the-day/2023-08-10.jpg
 date: 2023-08-10 14:44 -0700
 author: HARRISON MILLER
