--- a/_columns/The_Big_Picture/2023-08-17.md
+++ b/_columns/The_Big_Picture/2023-08-17.md
@@ -129,7 +129,7 @@ Oracle is also building a flat base as it consolidates after a big run-up in lat
 [5 Best Dow Jones Stocks To Buy And Watch](https://www.investors.com/research/dow-jones-stocks/)
 
 
-[![]()Bulls Give Up As Dow Joins Sell-Off; The Ultimate AI Stock Fights On](https://www.investors.com/market-trend/stock-market-today/dow-jones-breaks-key-level-more-market-leaders-crack-as-bulls-give-up/)
+[Futures: Bears Rule As Losses Pile Up; Ultimate AI Stock Fights On](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-bears-rule-leaders-crack-ai-stock-nvidia-fights-on/)
 
 
 
