--- a/_columns/The_Big_Picture/2023-08-29.md
+++ b/_columns/The_Big_Picture/2023-08-29.md
@@ -57,7 +57,7 @@ There is still plenty of key economic data to drop this week though, including t
 ---
 
 
-[**Market Rally Makes Bullish Move; Tesla Leads 9 Stocks Into Buy Areas**](https://www.investors.com/market-trend/stock-market-today/market-rally-makes-bullish-move-on-jobs-data-tesla-leads-9-stocks-flash-buy-signals/)
+**[Futures: What To Do After Bullish Market Move](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-makes-bullish-move-tesla-leads-9-stocks-in-buy-areas/)**
 
 
 
