--- a/_columns/The_Big_Picture/2023-09-06.md
+++ b/_columns/The_Big_Picture/2023-09-06.md
@@ -160,13 +160,13 @@ Breaking Bad
 What about the bearish end of the spectrum?
 
 
-The worst industry group year to date? Drugstores, a tiny group of just five stocks. Yet it's down 33.6% since Jan. 1.
+The worst industry group year to date? That's drugstores, a tiny group of just five stocks. Yet it's down 33.6% since Jan. 1.
 
 
-Other poor performers include superregional banks (down 33.3%), jewelry retailers (-23.7%), discount and variety retail (-19.4%) and specialty retail (-13.8%). Other regional bank and telecom groups have also done badly in 2023 so far. The electric power utility industry group is down 15.1%, vs. a 16.4% rise by the S&P 500.
+Other poor performers include superregional banks (down 33.3%), jewelry retailers (-23.7%), discount and variety retail (-19.4%) and specialty retail (-13.8%). Other regional bank and telecom groups have also done badly in 2023 so far. The electric utility industry group is down 15.1%, vs. a 16.4% rise by the S&P 500.
 
 
-Looking at the sector-classified IBD stock tables, the Retail sector ranks in the top half of 33 broad industry sectors at No. 13, with an 11.6% lift so far this year on a price-weighted basis.
+Looking at the sector-classified IBD stock tables, the Retail sector ranks in the top half of 33 sectors at No. 13, with an 11.6% lift so far this year on a price-weighted basis.
 
 
 [Please go to IBD SmartTables](https://www.investors.com/data-tables/ibd-smart-nyse-nasdaq-tables-sep-06-2023/) within the IBD Data Tables to see the top sectors now.
