--- a/_columns/The_Big_Picture/2023-09-08.md
+++ b/_columns/The_Big_Picture/2023-09-08.md
@@ -54,7 +54,7 @@ Notable earnings reports in the coming week include Leaderboard stock **Adobe** 
 ---
 
 
-[**![]()Ailing Rally Eyes New iPhone, AI Giants; Six Stocks Near Buy Points**](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-apple-iphone-ai-giants-six-cathie-wood-stocks-near-buy-points/)
+**[Futures: Market Rally Battered; Here's What To Do](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-battered-what-to-do-apple-iphone-ai-giants-oracle-adobe-due/)**
 
 
 
